Designer: Remove widget from Z-order list in ReparentWidgetCommand::undo()

The statement was apparently forgotten.

Task-number: QTBUG-62049
Change-Id: I9ab30ff2a094901965a76e8236a833f96cd7ec23
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>